[gd_scene load_steps=8 format=3 uid="uid://c3qaf0qvq6god"]

[ext_resource type="Script" uid="uid://dt7s08ul5cjrp" path="res://Scripts/ui/cards_pile.gd" id="1_7a23i"]
[ext_resource type="Texture2D" uid="uid://8r4u7dbohwrl" path="res://Scenes/card_back.png" id="1_r5wg7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7p1bi"]
size = Vector2(96, 143)

[sub_resource type="Animation" id="Animation_psro3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 4.76837e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("card2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.50166e-05, 10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("card2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_4wwg3"]
resource_name = "mouse_enter"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 4.76837e-07), Vector2(-26, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.108333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.378195, -0.311695]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("card2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.50166e-05, 10), Vector2(26, 13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("card2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.446355]
}

[sub_resource type="Animation" id="Animation_8e8qj"]
resource_name = "mouse_exit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-26, 0), Vector2(0, 4.76837e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.378195, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("card2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(26, 13), Vector2(2.50166e-05, 10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("card2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.446355, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a6htn"]
_data = {
&"RESET": SubResource("Animation_psro3"),
&"mouse_enter": SubResource("Animation_4wwg3"),
&"mouse_exit": SubResource("Animation_8e8qj")
}

[node name="Cards" type="Node2D"]
script = ExtResource("1_7a23i")

[node name="card1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 4.76837e-07)
scale = Vector2(3.29183, 3.29183)
texture = ExtResource("1_r5wg7")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://Textures/Cards/card_back.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "4de41f435296957b73f655c88578ad9d"

[node name="card2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2.50166e-05, 10)
scale = Vector2(3.2876, 3.2876)
texture = ExtResource("1_r5wg7")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://Textures/Cards/card_back.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "4de41f435296957b73f655c88578ad9d"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_7p1bi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a6htn")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -222.0
offset_top = -203.0
offset_right = 153.0
offset_bottom = -106.0

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
